# mopidy-spotify-connect

./: .gitignore  README.md  pyproject.toml
src/mopidy_spotify_render/: __init__.py  ext.conf  frontend.py  on_event.sh
